; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_entry.c_archive_entry_set_mtime.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_entry.c_archive_entry_set_mtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_entry = type { %struct.TYPE_2__, i32, i64 }
%struct.TYPE_2__ = type { i64, i32 }

@AE_SET_MTIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @archive_entry_set_mtime(%struct.archive_entry* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.archive_entry*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.archive_entry* %0, %struct.archive_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i64, i64* %6, align 8
  %9 = call i32 @FIX_NS(i32 %7, i64 %8)
  %10 = load %struct.archive_entry*, %struct.archive_entry** %4, align 8
  %11 = getelementptr inbounds %struct.archive_entry, %struct.archive_entry* %10, i32 0, i32 2
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* @AE_SET_MTIME, align 4
  %13 = load %struct.archive_entry*, %struct.archive_entry** %4, align 8
  %14 = getelementptr inbounds %struct.archive_entry, %struct.archive_entry* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = or i32 %15, %12
  store i32 %16, i32* %14, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.archive_entry*, %struct.archive_entry** %4, align 8
  %19 = getelementptr inbounds %struct.archive_entry, %struct.archive_entry* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  store i32 %17, i32* %20, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load %struct.archive_entry*, %struct.archive_entry** %4, align 8
  %23 = getelementptr inbounds %struct.archive_entry, %struct.archive_entry* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i64 %21, i64* %24, align 8
  ret void
}

declare dso_local i32 @FIX_NS(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
